# CNN-on-FPGA

./: .cproject  .gitignore  .project  .vivado_hls_log_all.xml  CMakeLists.txt  CNN.ipynb  Makefile  customScript.tcl  et --hard HEAD@{1}  pool.cpp  script.py  top.v  vivado_hls.app
.apc/: autopilot.apfmapping
OLED-driver/: OLED-driver.xpr
OLED-driver/OLED-driver.cache/wt/: gui_handlers.wdf  java_command_handlers.wdf  synthesis.wdf  webtalk_pa.xml
OLED-driver/OLED-driver.runs/.jobs/: vrs_config_11.xml  vrs_config_14.xml  vrs_config_15.xml  vrs_config_2.xml  vrs_config_3.xml
OLED-driver/OLED-driver.runs/impl_1/: .vivado.begin.rst  .write_bitstream.begin.rst  gen_run.xml  init_design.pb  opt_design.pb  phys_opt_design.pb  place_design.pb  project.wdf  route_design.pb  runme.sh  top.bit  top.tcl  top.vdi  top_bus_skew_routed.rpt  top_bus_skew_routed.rpx  top_clock_utilization_routed.rpt  top_control_sets_placed.rpt  top_drc_opted.rpt  top_drc_routed.rpt  top_io_placed.rpt  top_methodology_drc_routed.pb  top_methodology_drc_routed.rpt  top_methodology_drc_routed.rpx  top_opt.dcp  top_physopt.dcp  (+17 more)
Verilog/: Makefile
Verilog/mem_files/: fc1_bias.mem  fc1_weight.mem  image.mem
Verilog/old/: conv.v  image_rom.v  tb_mac.v
Verilog/src/: comp.v  control.v  counters.v  kernel_rom.v  mac.v  patch.v  shift_reg.v
Verilog/tests/: tb_control.v  tb_conv.v  tb_image_ram.v  tb_mult_mux.v  tb_patch.v  tb_products_reg.v  tb_shift_reg.v
cnn/: vivado_hls.app
cnn/solution1/: solution1.aps  solution1.directive
conv_layer2/: conv_layer2.xpr
fullyConnectedNN/: Accuracyfunctions.h  ActivationFunction.h  CMakeLists.txt  CrossEntropyLoss.h  LayerDense.cpp  LayerDense.h  Loss.h  ReluActivation.h  SoftMaxActivation.h  SpiralFunction.cpp  SpiralFunction.h  main.cpp
ip_repo/: edit_myip_v1_0.xpr
ip_repo/myip_1.0/: component.xml
mem/: split_0.mem  split_1.mem  split_10.mem  split_11.mem  split_12.mem  split_13.mem  split_14.mem  split_15.mem  split_2.mem  split_3.mem  split_4.mem  split_5.mem  split_6.mem  split_7.mem  split_8.mem  split_9.mem  weightCol0.mem  weightCol1.mem  weightCol5.mem  weightCol6.mem
mem_files/: conv1_bias.mem  conv1_weight.mem  conv2_bias.mem  conv2_weight.mem  fc1_bias.mem  fc1_weight.mem  image.mem  inputdata0.mem  inputdata9.mem  test_image.mem  weightCol0.mem  weightCol2.mem  weightCol3.mem  weightCol4.mem  weightCol6.mem  weightCol7.mem  weightCol8.mem  weightCol9.mem
project_2/: conv_tb_behav.wcfg  pool_tb_behav.wcfg  project_2.xpr  tb_top_behav.wcfg  tb_top_behav1.wcfg  vivado.jou  vivado_12080.backup.jou  vivado_pid1396.str
scripts/: script.tcl
solution1/: csynth.tcl  script.tcl  solution1.aps  solution1_data.json
solution1/.autopilot/: .automg_exit  .autopilot_exit  .autosim_exit
solution1/.debug/: top.protoinst
src/: ActivationFunction.h  CNNConvRe.cpp  Convolution.cpp  Convolution.h  Dense.cpp  Dense.h  Layer.h  LayerDense.cpp  LayerDense.h  MaxPool.cpp  MaxPool.h  RELU.cpp  RELU.h  ReluActivation.h  SoftMaxActivation.h  adder_tree.v  afTest.cpp  bias1.h  bias2.h  channelMem.v  cnn.cpp  cnpy.cpp  cnpy.h  comp.v  compD.v  control.v  conv.cl  conv.cpp  conv.h  conv.v  conv1_bias.h  conv1_weight.h  conv2_bias.h  conv2_weight.h  convCheck.py  conv_control.v  counter.v  counters.v  cudaConv1.cu  cudaTestingRe.cu  (+57 more)
src/conv/: comp.v  conv.v  conv_control.v  counters.v  mult_mux.v  patch_addr_gen.v  patch_data_latch.v  products_reg.v
src/conv_layer/: counter.v  kernel_rom.v  load_bias.v  load_kernel.v  result_registerFile.v  top_control.v  top_module.v
src/conv_layer2/: load_bias.v  top_control.v  top_module.v
src/pooling/: pool.v
test/: tbCounter.v
tests/: control.v  tb_comp.v  tb_control.v  tb_conv.v  tb_counters.v  tb_layer1.v  tb_layer1_control.v  tb_layer1_mem.v  tb_layer_control.v  tb_load_bias.v  tb_load_kernel.v  tb_out_counter.v  tb_patch.v  tb_result.v  tb_top.v  tb_top_module.v  top.v
tests/conv/: tb_comp.v  tb_conv.v  tb_conv_control.v
tests/conv_layer/: tb_counter.v  tb_result.v  tb_top_control.v  tb_top_module.v
xillinux-eval-zedboard-2.3/cores/: xillyvga_core.edf
xillinux-eval-zedboard-2.3/verilog/: xillydemo-vivado.tcl
xillinux-eval-zedboard-2.3/vhdl/: xillydemo-vivado.tcl
xillinux-eval-zedboard-2.3/vivado-essentials/: xillydemo.xdc
(+966 files in other folders)
